--- a/app_check_link/res/layout/activity_xu_li.xml
+++ b/app_check_link/res/layout/activity_xu_li.xml
@@ -16,39 +16,37 @@
         android:orientation="horizontal"
         android:gravity="center"
         android:background="@drawable/bo">
-        <androidx.cardview.widget.CardView
+        <ImageView
             android:layout_marginStart="20dp"
             android:layout_width="90dp"
-            android:layout_height="90dp"
-            app:cardCornerRadius="45dp">
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/click"
-                android:scaleType="fitXY"/>
-        </androidx.cardview.widget.CardView>
+            android:layout_height="65dp"
+            android:background="@drawable/icons"
+            android:scaleType="fitXY"/>
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
+            android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:layout_gravity="center"
             android:orientation="vertical"
             android:gravity="center">
+
             <TextView
+                android:id="@+id/tk"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:textSize="17sp"
-                android:textStyle="bold"
+                android:fontFamily="cursive"
                 android:text="TK : "
-                android:id="@+id/tk"/>
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:textStyle="bold" />
             <TextView
                 android:layout_marginTop="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
-                android:textSize="16sp"
+                android:textSize="15sp"
+                android:fontFamily="cursive"
                 android:textStyle="normal"
                 android:text="Network : "
                 android:id="@+id/txt_network"/>
@@ -168,6 +166,15 @@
         android:text="... Đang check link ..."
         android:visibility="gone"
         android:id="@+id/stus_tb"/>
+    <ImageView
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="25dp"
+        android:background="@drawable/log_out"
+        android:layout_marginVertical="25dp"
+        android:id="@+id/go_out"/>
 
     
 
